--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,7 @@
 .App {
+  margin: 0;
+  padding: 0;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +11,26 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  margin-top: 3rem;
+  width: 12rem;
+  height: 3.5rem;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Patrick Hand', cursive;
+  font-size: 1.5rem;
+  cursor: pointer;
+  background-color: #F72C25;
+  color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  width: 12.5rem;
+  height: 4rem;
+}
+
+
+.btn:active {
+  width: 11.5rem;
+  height: 3rem;
 }
