--- a/src/components/QuizPage/Quiz.css
+++ b/src/components/QuizPage/Quiz.css
@@ -37,16 +37,18 @@ main .btn{
 
 .answers {
     display: grid;
+    height: max-content;
     grid-template-columns: repeat(4,1fr);
     grid-auto-rows: 1fr;
     justify-content: center;
-    align-items: center;
+    justify-items: center;
     gap: 0rem;
     font-size: 1.5rem;
     margin-top: 2rem;
 }
 
 .answer {
+    height: 100%;
     width: 75%;
     padding: .5rem;
     border: 1px solid rgba(245, 245, 245, 0.651);
