--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -20,3 +20,18 @@
 .a {
     font-size: 6rem;
 }
+
+@media screen and (max-width:1000px) {
+    .letter {
+        font-size: 3rem;
+    }
+    .letter:hover {
+        font-size: 3rem;
+    }
+
+    .title {
+        margin: 0;
+        padding: auto;
+        width: 100%;
+    }
+}
